<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.DetailCounterpartyFragment">

    <data>
       <import type="mikhail.tulupov.application.counterparty.utilities.BitmapConverter"/>
        <variable
            name="counterparty"
            type="mikhail.tulupov.application.counterparty.data.models.Counterparty" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:clickable="false"
            android:src="@{BitmapConverter.bitmapToDrawable(counterparty.avatar)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <EditText
            android:id="@+id/et_name_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/roboto"
            android:hint="@string/name_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@{counterparty.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView"
            tools:text="Name" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/et_name_detail"
            tools:layout_editor_absoluteX="-26dp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/phone_number_hint"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:singleLine="false"
            android:text="@{counterparty.phoneNumber}"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            tools:text="+7 909 817-72-16" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/phone_icon_description"
            android:src="@drawable/ic_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/email_icon_description"
            android:src="@drawable/ic_email"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/et_phone" />

        <EditText
            android:id="@+id/et_email_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@{counterparty.email}"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            tools:text="kd.maikl-201@mail.ru"
            android:importantForAutofill="no" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/add"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>